Fixed webpack config

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "private": "true",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack ./src/scripts/app.js ./dist/bundle.js",
-    "build:prod": "webpack ./src/scripts/app.js ./dist/bundle.js -p"
+    "start": "webpack serve --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "bundle-report": "webpack-bundle-analyzer --port 4200 compilation-stats.json"
   },
   "repository": {
     "type": "git",
@@ -15,9 +15,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^5.2.4",
+    "html-webpack-plugin": "^5.3.1",
+    "style-loader": "^2.0.0",
     "webpack": "^5.33.2",
+    "webpack-bundle-analyzer": "^4.4.1",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
     "billboard.js": "^3.0.3"
