--- a/.github/workflows/autodeploy.yml
+++ b/.github/workflows/autodeploy.yml
@@ -37,7 +37,7 @@ jobs:
       # deploy site to netlify using secrets created on repository
       - uses: netlify/actions/cli@master 
         env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         with:
           args: deploy --message='Publishing App' --dir=dist --prod
